# RIF

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RIF.cpp  RIF.h  Test.docx  counter.py  s.txt
src/: char.cpp  char.hpp  main.cpp
src/ICU/: Decoders.cpp  Decoders.hpp
src/ImGui/: Window.cpp  Window.hpp
src/ImGui/ui/: DesktopUi.hpp
src/ImGui/ui/desktop_menu/: MainMenu.cpp  MainMenu.h
src/aho_corasick/: SymbolsTree.hpp  TreeWalker.hpp
src/configs/: SearchConfig.cpp  SearchConfig.hpp
src/core/: Core.cpp  Core.hpp
src/folders_inspector/: FoldersInspector.cpp  FoldersInspector.hpp
src/global/: GlobalQueues.hpp  ThreadSafeQueue.hpp
src/home_decoder/: HomeDecoder.h
src/language_deductor/: LanguageDeductor.cpp  LanguageDeductor.hpp
src/ocr/: MutexMap.hpp  OcrManager.cpp  OcrManager.hpp  OcrReader.hpp
src/preproc/: PreRegisters.hpp  PreSynonyms.cpp  PreSynonyms.hpp  Preprocessor.cpp  Preprocessor.hpp
src/read/: BaseReader.hpp  ReadersVariants.hpp  UnifiedReader.cpp  UnifiedReader.hpp
src/read/binary/: BinaryReader.hpp  FileStreamReader.hpp
src/read/docx/: DocxReader.cpp  DocxReader.hpp
src/read/mmap/: MemoryMapWindows.h  MmapReader.cpp  MmapReader.h
src/read/pdf/: PdfReader.hpp
src/results/: SearchResult.cpp  SearchResult.hpp
src/search/: SearchEngine.cpp  SearchEngine.hpp  SearchExact.hpp  SearchRawResult.hpp  SearchSynonymous.hpp  ThreadSerachPool.cpp  ThreadSerachPool.hpp
src/search/caching/: LRUSteamming.hpp
src/search/synonymous/: SteammerPipeline.cpp  Stemmer.cpp  Stemmer.hpp  StemmerPipeline.hpp
src/synonymous/: DeductorStemmer.cpp  DeductorStemmer.hpp  SteammerPipeline.cpp  Stemmer.cpp  Stemmer.hpp  StemmerPipeline.hpp
